<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@color/system_view_color_transparent_white"
    android:orientation="vertical">

    <RadioGroup
        android:id="@+id/rgMapNature"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/bg_white_rect"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/spacing_normal"
        android:paddingTop="@dimen/spacing_normal">

        <RadioButton
            android:id="@+id/rbVector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/spacing_double"
            android:layout_marginRight="@dimen/spacing_double"
            android:button="@null"
            android:checked="true"
            android:drawableTop="@drawable/radio_vector"
            android:gravity="center_horizontal"
            android:text="@string/txtVector"
            android:textSize="@dimen/fontsize_medium" />

        <RadioButton
            android:id="@+id/rbImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/spacing_double"
            android:button="@null"
            android:drawableTop="@drawable/radio_image"
            android:gravity="center_horizontal"
            android:text="@string/txtImage"
            android:textSize="@dimen/fontsize_medium" />

        <RadioButton
            android:id="@+id/rbTerrain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/spacing_double"
            android:button="@null"
            android:drawableTop="@drawable/radio_terrain"
            android:gravity="center_horizontal"
            android:text="@string/txtTerrain"
            android:textSize="@dimen/fontsize_medium" />
    </RadioGroup>

    <TextView
        android:id="@+id/tvTopicMap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/spacing_normal"
        android:paddingLeft="@dimen/spacing_double"
        android:paddingTop="@dimen/spacing_normal"
        android:text="@string/titleTopic"
        android:textColor="@color/system_font_color_sub_light"
        android:textSize="@dimen/fontsize_medium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <!--ListView-->
        <ExpandableListView
            android:id="@+id/lvTopicMap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_white_rect"
            android:cacheColorHint="@android:color/transparent"
            android:divider="@null"
            android:listSelector="@android:color/transparent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_normal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnReset"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/bg_btn_style_light"
            android:text="@string/btnReset"
            android:textColor="@color/system_font_color_light"
            android:textSize="@dimen/fontsize_medium" />

        <Button
            android:id="@+id/btnConfirm"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/bg_btn_style_deep"
            android:text="@string/btnConfirm"
            android:textColor="@color/system_font_color_pure"
            android:textSize="@dimen/fontsize_medium" />
    </LinearLayout>
</LinearLayout>